--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,2 +1,10 @@
+aiohttp==2.0.7
+appdirs==1.4.3
+async-timeout==1.2.1
+chardet==3.0.2
+multidict==2.1.4
+packaging==16.8
+pyparsing==2.2.0
 pyserial==2.7
-aiohttp
+six==1.10.0
+yarl==0.10.2
